--- a/account.html
+++ b/account.html
@@ -76,7 +76,7 @@
         <li class="item menu"><a class="link px-4 py-2" href="#" aria-label="Navigation Menu">&#9776;</a></li>
       </ul>
       <ul class="list">
-        <li class="item"><a class="link px-4 py-2" href="./service.html">Services</a></li>
+        <li class="item"><a class="link px-4 py-2" href="./services.html">Services</a></li>
         <li class="item"><a class="link px-4 py-2" href="./members.html">Members</a></li>
         <li class="item split"><a class="link px-4 py-2 current" href="./account.html">Account</a></li>
         <li class="item"><a class="link px-4 py-2" href="./sign_up.html">Sign Up</a></li>
@@ -86,7 +86,7 @@
   </header>
 
   <main class="ps-rel">
-    <!---->
+    
     <section class="account-bg container">
         <!--Box-1-->
       <header class="grid mb-50 account_border">
@@ -266,7 +266,7 @@
         <img src="" alt="">
       </div>
 
-      <!-- -->
+      
 
       <div class="bgc-white card-main">
         <p>Passionate about both data and people, I utilize a data-driven approach to create engaging and effective learning experiences.</p>
@@ -280,7 +280,7 @@
 
    </div>
 
-  </section>
+    </section>
 
 
 
