--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
         <li class="item menu"><a class="link px-4 py-2" href="#" aria-label="Navigation Menu">&#9776;</a></li>
       </ul>
       <ul class="list">
-        <li class="item"><a class="link px-4 py-2" href="./service.html">Services</a></li>
+        <li class="item"><a class="link px-4 py-2" href="./services.html">Services</a></li>
         <li class="item"><a class="link px-4 py-2" href="./members.html">Members</a></li>
         <li class="item split"><a class="link px-4 py-2" href="./account.html">Account</a></li>
         <li class="item"><a class="link px-4 py-2" href="./sign_up.html">Sign Up</a></li>
@@ -68,7 +68,7 @@
     </nav>
   </header>
 
-  <main class="ps-rel " style="border: 3px solid red">
+  <main class="ps-rel ">
     <div class="home-bg"></div> 
     
     <div class="container grid mt-35 mb-20 c1-50-90" style="border: 3px solid green">
